tests/parser/bad/stmts_t-id-bind-and-with.scilla
scilla_version 0

contract Test
(something : ByStr20)

transition arbitrary ()
  a <- &something
end
